# pandaprobe

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FRONTEND_AGENT_PROMPT.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  start.sh
backend/: .env.example  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
backend/app/: logging.py  main.py
backend/app/api/: dependencies.py  middleware.py  rate_limit.py
backend/app/registry/: constants.py  exceptions.py  security.py  settings.py
backend/app/services/: analytics_service.py  billing_service.py  cli_service.py  crm_service.py  email_service.py  eval_service.py  identity_service.py  trace_service.py  usage_service.py
backend/migrations/: env.py
backend/migrations/versions/: 1b151bbba793_add_session_scores_table.py  1c98dcbcf360_add_missing_fk_eval_monitors_last_run_.py  26bcb17b08cd_make_trace_scores_value_nullable_for_.py  3936db5fe4ae_add_failed_count_to_eval_runs_and_.py  3ca1d40bddfa_add_invitations_table.py  3ca3dee4b44a_add_subscription_and_usage_tables.py  572b122d002a_refactor_evaluations_to_eval_runs_and_.py  5876207a984b_add_reported_usage_watermark_columns.py  7ccbb500ad9c_add_status_column_to_trace_scores.py  943fb9918228_rename_total_traces_to_total_targets_.py  bf86fb585ed9_fresh_pandaprobe_db_schema.py  fb266e680e34_add_eval_monitors_table_and_monitor_id_.py
backend/scripts/: docker-entrypoint.sh  worker_health.py
backend/scripts/seed/: 02_rag_pipeline.json  04_error_trace.json  05_chatbot_support_turn2.json  README.md  (+1 more)
backend/tests/: conftest.py
(+462 files in other folders)
