[project]
name = "pandaprobe"
version = "0.1.0"
description = "Open-source agent tracing and evaluation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "prometheus-client>=0.21.0",
    "slowapi>=0.1.9",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.20",
    "litellm>=1.82.0",
    "firebase-admin>=6.6.0",
    "supabase>=2.0.0",
    "scalar-fastapi>=1.6.2",
    "croniter>=6.0.0",
    "celery-redbeat>=2.2.0",
    "stripe>=15.0.0",
    "resend>=2.28.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0"]
test = [
    "httpx>=0.28.0",
    "nest-asyncio>=1.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 119
exclude = ["migrations", "*.ipynb", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "B", "ERA", "D"]
ignore = ["E501", "F401", "D203", "D213", "B904", "B008", "D107"]
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"tests/*" = ["D100", "D103", "D104"]
